Revamp the Scarlet Set; provide Potion Effects set bonus